--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,3 +31,4 @@ jobs:
       with:
         # Build directory to deploy
         build_dir: dist
+        ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
