--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,6 +29,6 @@ jobs:
     - name: GitHub Pages
       uses: crazy-max/ghaction-github-pages@v2.0.1
       with:
-        # Build directory to deploy
-        build_dir: dist
         ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+        BRANCH: gh-pages # The branch the action should deploy to.
+        FOLDER: dist # The folder the action should deploy.
