--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,7 +27,7 @@ jobs:
     - run: npm install
     - run: npm run build --if-present
     - name: GitHub Pages
-      uses: crazy-max/ghaction-github-pages@v2.0.1
+      uses: JamesIves/github-pages-deploy-action@3.4.9
       with:
         ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         BRANCH: gh-pages # The branch the action should deploy to.
